# harisa-rs

./: Cargo.toml
src/: lib.rs
src/core/: mod.rs
src/core/cc_snark/: data_structure.rs  generator.rs  mod.rs  prover.rs  test.rs  verifier.rs
src/core/pedersen/: circuit.rs  data_structure.rs  mod.rs  test.rs
src/harisa/: arithm.rs  bound.rs  data_structure.rs  generator.rs  hash_to_prime.rs  mod.rs  prover.rs  test.rs  verifier.rs
