[package]
name = "harisa-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
bit-vec = { version = "0.6", features = ["serde"] }
serde = {version = "1.0.159", features = ["derive", "rc"]}
ark-ec = {version ="0.4.2",  default-features = false}
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-serialize = { version ="0.4.2", features=["derive"]}
ark-relations = "0.4.0"
ark-poly = "0.4.2"
ark-r1cs-std = { version = "0.4.0", optional = true, default-features = false }
ark-crypto-primitives = {version = "0.4.0", features = ["snark", "encryption", "sponge"]}
rayon = {verion = "1.7.0", optional= true}
tracing = {version = "0.1.37", optional=true}
derivative = { version = "2.2.0", default-features = false, optional = true }
ark-sponge = "0.3.0"
ark-bn254 = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
lazy_static = "1.4.0"
serde_json = "1.0.108"
dock_crypto_utils = { version = "0.10.0", default-features = false }
digest = {version = "0.10.6", default-features = false}
merlin = { version = "3.0.0", default-features = false}
sha3 = {version = "0.10.7", default-features = false}
pest = {version = "2.5.7", features=["std"]}
pest_derive = "2.5.7"
ark-bls12-381 = {version="0.4.0", default-features=false, features=["curve"]}
hashbrown = "0.13.2"
itertools = "0.10.5"
paste = "1.0.12"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
num-traits = "0.2.15"

[features]
default = ["parallel"]
std = ["ark-ff/std", "serde", "r1cs", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-crypto-primitives/std", "ark-std/std"]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-crypto-primitives/parallel", "ark-std/parallel", "rayon"]
print-trace = ["ark-std/print-trace"]
r1cs = ["ark-crypto-primitives/r1cs", "ark-r1cs-std", "tracing", "derivative"]
serde = ["serde/std"]

[profile.release]
debug = true

[profile.bench]
debug = true

[dev-dependencies]
ark-bls12-377 = {version="0.4.0", default-features=false, features = ["curve", "r1cs"]}
ark-bls12-381 = {version="0.4.0", default-features=false, features=["curve"]}
ark-bw6-761 = "0.4.0"
ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "r1cs" ] }
ark-mnt4-298 = { version = "0.4.0", features = ["r1cs"]}
ark-mnt6-298 = { version = "0.4.0", features = ["r1cs"]}
blake2 = "0.10.6"
num-traits = {version="0.2.15", default-features=false}
rand_chacha = "0.3.1"
